--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,12 +12,14 @@
     "@headlessui/vue": "^1.7.14",
     "@heroicons/vue": "^2.0.18",
     "@tailwindcss/forms": "^0.5.3",
-    "axios": "^1.4.0",
+    "axios": "^1.6.8",
     "chart.js": "^3.9.1",
+    "moment": "^2.30.1",
     "sweetalert2": "^11.10.3",
     "vue": "^3.2.47",
     "vue-axios": "^3.5.2",
     "vue-chartjs": "^4.1.2",
+    "vue-flatpickr-component": "^11.0.5",
     "vue-router": "^4.0.13",
     "vuex": "^4.0.2"
   },
