add db dialect env file

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,6 +2,7 @@ DB_HOST="db_host"
 DB_NAME="db_name"
 DB_PASS="db_password"
 DB_USER="db_user"
+DB_DIALECT="postgres|mysql"
 NODE_ENV="development"
 JWT_TOKEN_PRIVATE_KEY="jwt_private_key"
 JWT_REFRESH_TOKEN_PRIVATE_KEY="jwt_refresh_token"
