adicionado paginacao na listagem de visitas

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -4,5 +4,6 @@ DB_PASS="db_password"
 DB_USER="db_user"
 DB_DIALECT="postgres|mysql"
 NODE_ENV="development"
+BASE_URL="http://localhost/api"
 JWT_TOKEN_PRIVATE_KEY="jwt_private_key"
 JWT_REFRESH_TOKEN_PRIVATE_KEY="jwt_refresh_token"
